@@ -37,7 +37,7 @@ use Getopt::Std;
 my %Options;
 
 my $ok =
-  getopts( 'o:abnmwWiPG:u:g:d:s:c:k:t:A:B:C:D:E:F:H:L:M:N:S:T:?', \%Options );
+  getopts( 'o:abnmwWiPG:u:g:d:s:c:k:t:A:B:C:D:E:F:H:L:M:N:O:S:T:X:Z?', \%Options );
 
 if ( ( !$ok ) || ( @ARGV < 1 ) || ( $Options{'?'} ) ) {
     print_banner;
@@ -71,11 +71,13 @@ if ( ( !$ok ) || ( @ARGV < 1 ) || ( $Options{'?'} ) ) {
     print "  -G	supplementary comma-separated groups\n";
     print
       "  -H	sambaAcctFlags (samba account control bits like '[NDHTUMWSLKI]')\n";
-    print "  -M	local mailAddress (comma seperated)\n";
+    print "  -M	e-mail address (comma seperated)\n";
     print "  -N	given name \n";
+    print "  -O	localMailAddress (comma separated)\n";
     print "  -P	ends by invoking smbldap-passwd\n";
     print "  -S	surname (Family name)\n";
     print "  -T	mailToAddress (forward address) (comma seperated)\n";
+    print "  -X	input encoding for givenname and surname (default UTF-8)\n";
     print "  -Z	set custom LDAP attributes, name=value pairs comma separated\n";
     print "  -?	show this help message\n";
     exit(1);
@@ -93,6 +95,14 @@ if ( $nscd_status == 0 ) {
 
 # Read only first @ARGV
 my $userName = $ARGV[0];
+
+# Get the input encoding
+my $characterSet;
+if ( defined( $Options{'X'} ) ) {
+	$characterSet = $Options{'X'};
+} else {
+	$characterSet = "UTF-8";
+}
 
 # For computers account, add a trailing dollar if missing
 if ( defined( $Options{'w'} ) or defined( $Options{'W'} ) ) {
@@ -258,6 +268,7 @@ if (   defined $Options{'a'}
 
 my $userHomeDirectory;
 my ( $givenName, $userCN, $userSN, $displayName );
+my @mail;
 my @userMailLocal;
 my @userMailTo;
 my $tmp;
@@ -280,8 +291,8 @@ $userHomeDirectory =~ s/\/\//\//;
 $config{userLoginShell} = $tmp if ( defined( $tmp = $Options{'s'} ) );
 $config{userGecos}      = $tmp if ( defined( $tmp = $Options{'c'} ) );
 $config{skeletonDir}    = $tmp if ( defined( $tmp = $Options{'k'} ) );
-$givenName = ( utf8Encode( $Options{'N'} ) || $userName );
-$userSN    = ( utf8Encode( $Options{'S'} ) || $userName );
+$givenName = ( utf8Encode( $characterSet, $Options{'N'} ) || $userName );
+$userSN    = ( utf8Encode( $characterSet, $Options{'S'} ) || $userName );
 if ( $Options{'N'} and $Options{'S'} ) {
     $displayName = $userCN = "$givenName" . " $userSN";
 }
@@ -289,7 +300,8 @@ else {
     $displayName = $userCN = $userName;
 }
 
-@userMailLocal = &split_arg_comma( $Options{'M'} );
+@mail = &split_arg_comma( $Options{'M'} );
+@userMailLocal = &split_arg_comma( $Options{'O'} );
 @userMailTo    = &split_arg_comma( $Options{'T'} );
 
 ########################
@@ -463,7 +475,7 @@ if ( defined( $tmp = $Options{'m'} ) ) {
         if ( !( -d $userHomeDirectory ) ) {
             if ( $config{skeletonDir} ne "" ) {
                 system
-                  "cp -r $config{skeletonDir} $userHomeDirectory 2>/dev/null";
+                  "cp -pRP $config{skeletonDir} $userHomeDirectory 2>/dev/null";
             }
             else {
                 system "mkdir $userHomeDirectory 2>/dev/null";
@@ -485,30 +497,26 @@ if ( defined( $tmp = $Options{'m'} ) ) {
     }
 }
 
-# we start to defined mail adresses if option M or T is given in option
+# we start to defined mail adresses if option M, O or T are given
 my @adds;
-if (@userMailLocal) {
-    my @mail;
-    foreach my $m (@userMailLocal) {
+if ( @userMailLocal || @userMailTo ) {
+    push( @adds, 'objectClass' => 'inetLocalMailRecipient' );
+}
+if (@mail) {
+    foreach my $m (@mail) {
         my $domain = $config{mailDomain};
-        if ( $m =~ /^(.+)@/ ) {
-            push( @mail, $m );
-
-            # mailLocalAddress contains only the first part
-            $m = $1;
-        }
-        else {
-            push( @mail, $m . ( $domain ? '@' . $domain : '' ) );
+        if ( $m !~ /^(.+)@/ ) {
+            $m = $m . ( $domain ? '@' . $domain : '' );
         }
     }
-    push( @adds, 'mailLocalAddress' => [@userMailLocal] );
     push( @adds, 'mail'             => [@mail] );
+}
+
+if (@userMailLocal) {
+    push( @adds, 'mailLocalAddress' => [@userMailLocal] );
 }
 if (@userMailTo) {
     push( @adds, 'mailRoutingAddress' => [@userMailTo] );
-}
-if ( @userMailLocal || @userMailTo ) {
-    push( @adds, 'objectClass' => 'inetLocalMailRecipient' );
 }
 
 # Custom modification - MPK
@@ -625,6 +633,9 @@ EOF
         push( @adds, 'sambaLMPassword'      => "XXX" );
         push( @adds, 'sambaNTPassword'      => "XXX" );
     }
+}
+
+if (@adds) {
     my $modify =
       $ldap_master->modify( "uid=$userName,$config{usersdn}", add => {@adds} );
 
@@ -744,16 +755,19 @@ Ex: 'ou=admin,ou=all'
    spaces and trailing bracket are ignored (samba account control bits like '[NDHTUMWSLKI]'
 
 -M mail
-   local mail aliases (multiple addresses are seperated by spaces)
+   e-mail adresses (multiple addresses are seperated by commas)
 
 -N givenname
    family name. Defaults to username
+
+-O localMailAddress
+   localMailAddresses (multiple addresses are seperated by commas)
 
 -S surname
    defaults to username
 
 -T mailToAddress
-   Forward address (multiple addresses are seperated by spaces)
+   Forward address (multiple addresses are seperated by commas)
 
 -n
    do not print banner message
