@@ -50,12 +50,14 @@ my $ok = GetOptions(
     "I|sambaDisable"         => \$Options{I},
     "J|sambaEnable"          => \$Options{J},
     "L|shadowLock"           => \$Options{L},
-    "M|mailAddresses=s"      => \$Options{M},
+    "M|mail=s"               => \$Options{M},
     "N|givenName=s"          => \$Options{N},
+    "O|mailLocalAddress=s"   => \$Options{O},
     "P=s"                    => \$Options{P},
     "U|shadowUnlock"         => \$Options{U},
     "S|surname=s"            => \$Options{S},
     "T|mailToAddress=s"      => \$Options{T},
+    "X|inputEncoding=s"      => \$Options{X},
     "Z|attr=s"               => \$Options{Z},
     "a|addsambaSAMAccount"   => \$Options{a},
     "c|gecos=s"              => \$Options{c},
@@ -75,7 +77,7 @@ my $ok = GetOptions(
     "u|uid=s"                => \$Options{u}
 );
 
-#my $ok = getopts('A:B:C:D:E:F:H:IJM:N:S:PT:ame:f:u:g:G:d:l:r:s:c:ok:?h', \%Options);
+#my $ok = getopts('A:B:C:D:E:F:H:IJM:N:O:S:PT:X:Z:ame:f:u:g:G:d:l:r:s:c:ok:?h', \%Options);
 
 if ( ( !$ok ) || ( @ARGV < 1 ) || ( $Options{'h'} ) ) {
     print_banner;
@@ -94,11 +96,13 @@ if ( ( !$ok ) || ( @ARGV < 1 ) || ( $Options{'h'} ) ) {
     print "  -N|--givenName <name>        given name (first name)\n";
     print "  -S|--surname <suname>        surname (family name)\n";
     print "  -P                           ends by invoking smbldap-passwd\n";
-    print "  -M|--mailAddresses <mail,>   mailAddresses (comma seperated)\n";
+    print "  -M|--mail <mail,>            e-mail addresses (comma seperated)\n";
     print
-"  -T|--mailToAddress <mail,>   mailToAddress (forward address) (comma seperated)\n";
+"  -O|--mailLocalAddress <mail,> mailLocalAddress (comma separated)\n";
     print
-"  -e|--expire <date>           Sets both shadow and samba expiration date: like \"YYYY-MM-DD(HH:MM:SS)\", or \"yYmMdD\" to extand y year,m months and d days\n";
+"  -T|--mailToAddress <mail,>   mailToAddress (forward address) (comma separated)\n";
+    print
+"  -e|--expire <date>           Sets both shadow and samba expiration date: like \"YYYY-MM-DD(HH:MM:SS)\", or \"yYmMdD\" to extend y year,m months and d days\n";
     print
 "  --shadowExpire <date/n>      Shadow expiration date (like \"YYYY-MM-DD\") or 'n' days from today\n";
     print
@@ -136,6 +140,8 @@ if ( ( !$ok ) || ( @ARGV < 1 ) || ( $Options{'h'} ) ) {
 "  -I|--sambaDisable              disable an user. Can't be used with -H or -J\n";
     print
 "  -J|--sambaEnable               enable an user. Can't be used with -H or -I\n";
+    print
+"  -X|--inputEncoding             input encoding for givenname and surname (defaults to UTF-8)\n";
     print "  -h|--help                      show this help message\n";
     exit(1);
 }
@@ -147,6 +153,14 @@ if ( $< != 0 ) {
 
 # Read only first @ARGV
 my $user = $ARGV[0];
+
+# Get the input encoding
+my $characterSet;
+if ( defined( $Options{'X'} ) ) {
+	$characterSet = $Options{'X'};
+} else {
+	$characterSet = "UTF-8";
+}
 
 # Let's connect to the directory first
 my $ldap_master = connect_ldap_master();
@@ -324,11 +338,11 @@ if ( defined( $tmp = $Options{'d'} ) ) {
 # my givenname: Jerome
 
 if ( defined( $tmp = $Options{'N'} ) ) {
-    push( @mods, 'givenName' => utf8Encode($tmp) );
+    push( @mods, 'givenName' => utf8Encode($characterSet,$tmp) );
 }
 
 if ( defined( $tmp = $Options{'S'} ) ) {
-    push( @mods, 'sn' => utf8Encode($tmp) );
+    push( @mods, 'sn' => utf8Encode($characterSet,$tmp) );
 }
 
 my $cn;
@@ -342,7 +356,7 @@ if ( $Options{'N'} or $Options{'S'} or $Options{'a'} ) {
     $cn = "$Options{'N'}";
     $cn .= " " . $Options{'S'}
       unless ( $Options{'S'} eq $Options{'N'} and $Options{'N'} eq $user );
-    my $push_val = utf8Encode($cn);
+    my $push_val = utf8Encode($characterSet,$cn);
     push( @mods, 'cn' => $push_val );
 
     # set displayName for Samba account
@@ -464,8 +478,35 @@ if ( defined $Options{'U'} ) {
     push( @mods, 'userPassword' => $tmp );
 }
 
+if ( $tmp = $Options{'M'} ) {    
+
+    # action si + or - for adding or deleting an entry
+    my $action = '';
+    if ( $tmp =~ s/^([+-])+\s*// ) {
+        $action = $1;
+    }
+    my @mail = &split_arg_comma($tmp);
+    foreach my $m (@mail) {
+        my $domain = $config{mailDomain};
+        if ( $m !~ /^(.+)@/ ) {
+            $m = $m . ( $domain ? '@' . $domain : '' );
+        }
+    }
+    if ($action) {
+        my @old_mail;
+        @old_mail      = $user_entry->get_value('mail');
+        if ( $action eq '+' ) {
+            @mail          = &list_union( \@old_mail,      \@mail );
+        }
+        elsif ( $action eq '-' ) {
+            @mail          = &list_minus( \@old_mail,      \@mail );
+        }
+    }
+    push( @mods, 'mail' => [@mail] );
+}
+
 my $mailobj = 0;
-if ( $tmp = $Options{'M'} ) {
+if ( $tmp = $Options{'O'} ) {    
 
     # action si + or - for adding or deleting an entry
     my $action = '';
@@ -473,35 +514,17 @@ if ( $tmp = $Options{'M'} ) {
         $action = $1;
     }
     my @userMailLocal = &split_arg_comma($tmp);
-    my @mail;
-    foreach my $m (@userMailLocal) {
-        my $domain = $config{mailDomain};
-        if ( $m =~ /^(.+)@/ ) {
-            push( @mail, $m );
-
-            # mailLocalAddress contains only the first part
-            $m = $1;
-        }
-        else {
-            push( @mail, $m . ( $domain ? '@' . $domain : '' ) );
-        }
-    }
     if ($action) {
         my @old_MailLocal;
-        my @old_mail;
-        @old_mail      = $user_entry->get_value('mail');
         @old_MailLocal = $user_entry->get_value('mailLocalAddress');
         if ( $action eq '+' ) {
             @userMailLocal = &list_union( \@old_MailLocal, \@userMailLocal );
-            @mail          = &list_union( \@old_mail,      \@mail );
         }
         elsif ( $action eq '-' ) {
             @userMailLocal = &list_minus( \@old_MailLocal, \@userMailLocal );
-            @mail          = &list_minus( \@old_mail,      \@mail );
         }
     }
     push( @mods, 'mailLocalAddress', [@userMailLocal] );
-    push( @mods, 'mail' => [@mail] );
     $mailobj = 1;
 }
 
@@ -843,12 +866,12 @@ if ( defined( my $new_user = $Options{'r'} ) and $Options{'r'} ne $user ) {
 # Then assume it has been set correctly with -N and -S before.
     push( @mods, "cn" => $new_user )
       unless ( $user_entry->get_value("cn")
-        and $user_entry->get_value("cn") ne utf8Encode($user)
+        and $user_entry->get_value("cn") ne utf8Encode($characterSet,$user)
         or $Options{'N'} and $Options{'S'} );
     push( @mods, "displayName" => $new_user )
       unless ( not $samba
         or $user_entry->get_value("displayName")
-        and $user_entry->get_value("displayName") ne utf8Encode($user)
+        and $user_entry->get_value("displayName") ne utf8Encode($characterSet,$user)
         or $Options{'N'} and $Options{'S'} );
 
     if ( @mods > 0 ) {    # only change if there is something to change
