@@ -33,18 +33,27 @@ use smbldap_tools;
 use Getopt::Std;
 my %Options;
 
-my $ok = getopts('?h',\%Options);
+my $ok = getopts('?hX:',\%Options);
 
 if ( (!$ok) || (@ARGV < 1) || ($Options{'?'}) ) {
     print_banner;
     print "Usage: $0 [-h?] username\n";
     print "  -h	print Samba dates in human-readable form\n";
+    print "  -X	output character set (default UTF-8)\n";
     print "  -?	show this help message\n";
     exit (1);
 }
 
 # Read only first @ARGV
 my $user = $ARGV[0];
+
+# Get the input encoding
+my $characterSet;
+if ( defined( $Options{'X'} ) ) {
+	$characterSet = $Options{'X'};
+} else {
+	$characterSet = "UTF-8";
+}
 
 my $nscd_status = system "/etc/init.d/nscd status >/dev/null 2>&1";
 if ($nscd_status == 0) {
@@ -55,9 +64,9 @@ my $ldap_slave=connect_ldap_slave();
 
 my $lines;
 if ($Options{'h'}) {
-	$lines = utf8Decode(read_user_human_readable($user));
+	$lines = utf8Decode($characterSet,read_user_human_readable($user));
 } else {
-	$lines = utf8Decode(read_user($user));
+	$lines = utf8Decode($characterSet,read_user($user));
 }
 
 if ($lines) {
